# django-rq-scheduler

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  circle.yml  data.json  mkdocs.yml  pyproject.toml  setup.py
.github/: CONTRIBUTING.md
.github/actions/test-coverage/: action.yml
.github/workflows/: publish.yml  test.yml
docs/: changelog.md  commands.md  configuration.md  index.md  installation.md  requirements.txt  usage.md
scheduler/: __init__.py  admin.py  apps.py  decorators.py  models.py  queues.py  rq_classes.py  scheduler.py  settings.py  tests.py  tools.py  urls.py  views.py
scheduler/admin/: __init__.py  job.py  redis_models.py
scheduler/management/commands/: delete_failed_executions.py  export.py  import.py  rqstats.py  rqworker.py  run_job.py  stats.py
scheduler/migrations/: 0001_initial.py  0001_initial_squashed_0005_added_result_ttl.py  0002_add_timeout.py  0002_alter_cronjob_id_alter_repeatablejob_id_and_more.py  0003_auto_20220329_2107.py  0003_remove_queue_choices.py  0004_add_cron_jobs.py  0004_auto_20170903_1339.py  0004_cronjob_at_front_repeatablejob_at_front_and_more.py  0005_added_result_ttl.py  0005_alter_cronjob_at_front_alter_repeatablejob_at_front_and_more.py  0006_auto_20230118_1640.py  0007_add_result_ttl.py  0008_rename_str_val_jobarg_val_and_more.py  0009_alter_jobarg_arg_type_alter_jobarg_val_and_more.py  0010_queue.py  0011_worker_alter_queue_options_alter_cronjob_at_front_and_more.py  0012_alter_cronjob_name_alter_repeatablejob_name_and_more.py
scheduler/models/: __init__.py  args.py  execution.py  job_execution.py  scheduled_job.py
scheduler/static/scheduler/js/: base.js
scheduler/templates/admin/scheduler/: change_form.html  change_list.html  confirm_action.html  delete_job.html  job_detail.html  jobs-list.partial.html  jobs.html  queue_workers.html  scheduler_base.html  stats.html  worker_details.html  workers-list.partial.html
scheduler/templatetags/: scheduler_tags.py
scheduler/tests/: jobs.py  test_admin.py  test_job_arg_models.py  test_job_decorator.py  test_mgmt_cmds.py  test_models.py  test_redis_models.py  test_scheduler.py  test_settings.py  test_views.py  test_worker.py  testtools.py
testproject/testproject/: settings.py  urls.py
testproject19/: manage.py  travis_setup.sql
testproject19/testproject19/: settings.py  urls.py  wsgi.py
