[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-rq-scheduler"
packages = [
    { include = "scheduler" },
]
version = "2022.12.1"
description = "A database backed job scheduler for Django RQ with Django"
readme = "README.md"
keywords = ["django", "rq", "django-rq", "rq-scheduler"]
authors = [
    "Daniel Moran <daniel.maruani@gmail.com>"
]
license = "MIT"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Framework :: Django',
    'Framework :: Django :: 4.0',
    'Framework :: Django :: 4.1',
    'Framework :: Django :: 3.2',
]
homepage = "https://github.com/dsoftwareinc/django-rq-scheduler"

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.2, <=4.2"
django-model-utils = "^4.3"
django-rq = "^2.6"
rq-scheduler = "^0.11"
pytz = ">=2022.4,<2023.0"
croniter = "^1.3"
Flake8-pyproject = "^1.2"

[tool.poetry.dev-dependencies]
factory_boy = "^3"
poetry = "^1.2"
coverage = "^6.5"
fakeredis = "^2.2"

[tool.flake8]
max-line-length = 119
exclude = [
    'scheduler/migrations',
]