[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-rq-scheduler"
packages = [
    { include = "scheduler" },
]
version = "2023.3.0"
description = "A database backed job scheduler for Django RQ with Django"
readme = "README.md"
keywords = ["django", "rq", "django-rq"]
authors = [
    "Daniel Moran <daniel.maruani@gmail.com>",
]
maintainers = [
    "Daniel Moran <daniel.maruani@gmail.com>",
]
license = "MIT"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Framework :: Django',
    'Framework :: Django :: 4.0',
    'Framework :: Django :: 4.1',
    'Framework :: Django :: 3.2',
]
homepage = "https://github.com/dsoftwareinc/django-rq-scheduler"
documentation = "https://django-rq-scheduler.readthedocs.io/en/latest/"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dsoftwareinc/django-rq-scheduler/issues"
"Funding" = "https://github.com/sponsors/cunla"

[tool.poetry.dependencies]
python = "^3.9"
django = ">=3.2, <5"
django-model-utils = "^4.3"
django-rq = "^2.7"
croniter = "^1.3"

[tool.poetry.dev-dependencies]
poetry = "^1.3"
coverage = "^7"
fakeredis = "^2.9"
Flake8-pyproject = "^1.2"

[tool.flake8]
max-line-length = 119
exclude = [
    'scheduler/migrations',
]